# DTA-Challenge

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
dtamod/: __init__.py  dataset.py  features.py  load_test_data.py  plots.py  prepare_test_data.py  uptest.py
dtamod/modeling/: predict.py  train.py
