[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dtamod"
version = "0.0.1"
description = "Prepared for SFL Scientific Sr. Data Scientist Challenge"
authors = [
  { name = "Nick C Iovanac" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dtamod"]
force_sort_within_sections = true
